--- a/src/components/Products/ProductsModal/ProductsModal.module.scss
+++ b/src/components/Products/ProductsModal/ProductsModal.module.scss
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     border: none;
-    height: 100vh;
+    max-height: 100vh;
     width: 100vw;
     z-index: 1000;
     border-radius: 4px;
