--- a/src/components/Products/ProductsModal/ProductsModal.module.scss
+++ b/src/components/Products/ProductsModal/ProductsModal.module.scss
@@ -76,7 +76,8 @@
 
         img {
             width: 100%;
-            height: auto;
+            height: 40%;
+            object-fit: cover;
         }
 
         .box__product {
