--- a/src/components/Products/ProductsModal/ProductsModal.module.scss
+++ b/src/components/Products/ProductsModal/ProductsModal.module.scss
@@ -76,8 +76,9 @@
 
         img {
             width: 100%;
-            height: 50%;
+            height: 45%;
             object-fit: cover;
+            object-position: top;
         }
 
         .box__product {
